--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "value_iteration"
+name = "PIG"
 version = "1.0.0"
 maintainers = [
   { name="Niharika Reddy Peddinenikalva", email="n.peddinenikalva@lancaster.ac.uk" },
@@ -17,7 +17,7 @@ authors = [
   { name="Malcolm Connolly", email="m.connolly4@lancaster.ac.uk" },
   { name="Rebekah Fearnhead", email="r.fearnhead1@lancaster.ac.uk" },
 ]
-description = "Value iteration to find the optimal policy for a Markov Decision Process"
+description = "Value iteration to find the optimal policy for dice game PIG and PIGLET"
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
