--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "typing",
+    "typing", "plotly", "numpy"
 ]
 
 [project.urls]
